[tool.poetry]
name = "dexcaliburn"
version = "0.1.0"
description = "A tool to extract dynamically loaded bytecode"
authors = [
  "Mateo Dugas (neokaios)",
  "Léo Durand--Kollner (micronoyau)",
  "Sharujan Mahalingasivam (devilsharu)",
  "Jean-Marie Mineau <jean-marie.mineau@inria.fr>"
]
readme = "README.md"
include = [ "dexcaliburn/frida-scripts/out/_script.js" ]

[tool.poetry.dependencies]
python = "^3.10"
androguard = "==4.0.2" # == because we don't want the PyQt dep
frida-tools = "^12.3.0"
pysmali = "^0.2.3"

[tool.poetry.scripts]
dexcaliburn = 'dexcaliburn.dexcaliburn:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
